doesn't work ,but at least i have DOTS DOTS DOTS!
DOTS DOTS DOTS DA DA DA DOTS DOTS DOTS DOTS DOTS DOTS DOTS DA DA DA DA
DOTS DOTS DOTS DOTS DOTS DOTS DOTS DOTS DOTS DOTS DOTS DOTS DOTS DOTS
DOTS DOTS DOTS DOTS DOTS DOTS !

--- a/Project-bearcan/views/newproject.jade
+++ b/Project-bearcan/views/newproject.jade
@@ -3,6 +3,5 @@ extends layout
 block content
     h1= title
     form#formNewProject(name="newproject",method="post",action="/newproject")
-        input#inputProjectName(type="text", placeholder="projectname", name="projectname")
-        
+        input#inputprojectname(type="text", placeholder="projectname", name="projectname")
         button#btnSubmit(type="submit") submit
